--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="today">Сегодня</string>
     <string name="habits">Привычки</string>
     <string name="history">История</string>
+    <string name="settings">Настройки</string>
 </resources>
