added string localization & fix animations

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,16 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="today">Today</string>
+    <string name="today">Today</string>.
     <string name="habits">Habits</string>
     <string name="history">History</string>
     <string name="settings">Settings</string>
-    <string name="add_habits">Add habit</string>
+    <string name="add_habits">Add Habit</string>
     <string name="menu">Menu</string>
     <string name="back">Back</string>
     <string name="lang">Select language</string>
     <string name="night">Night mode</string>
-
     <string name="regular">Regular</string>
     <string name="harmful">Harmful</string>
     <string name="disposable">Disposable</string>
+    <string name="templates_label">or choose from preset ones</string>
+    <string name="categories_trend_title">Trend Habits</string>
+    <string name="categories_trend_description">Keep up with the world</string>
+    <string name="categories_trend_title_1">Structure screen time</string>
+    <string name="categories_trend_description_1">Lock the screen and maintain attention</string>
+    <string name="categories_trend_title_2">Limit caffeine</string>
+    <string name="categories_trend_description_2">Change its sources with healthier foods</string>
+    <string name="categories_trend_title_3">Laugh more</string>
+    <string name="categories_trend_description_3">Find something that makes you laugh out loud</string>
+    <string name="categories_trend_title_4">Have your hobbies</string>
+    <string name="categories_trend_description_4">Fill your life with meaningful hobbies</string>
+    <string name="categories_trend_title_5">Express cleaning</string>
+    <string name="categories_trend_description_5">Take a few minutes for a quick clean</string>.
+    <string name="categories_trend_title_6">Gain your ideal weight</string>
+    <string name="categories_trend_description_6">You don\'t look the same today as yesterday</string>
+    <string name="categories_important_title">Important habits</string>
+    <string name="categories_important_description">Fresh your life with simple actions</string>
+    <string name="categories_eat_title">Eat and drink healthfully</string>
+    <string name="categories_eat_description">Stay healthy by eating every day</string>
+    <string name="categories_sports_title">Keep active and fit</string>
+    <string name="categories_sports_description">Sweat doesn\'t cheat</string>
+    <string name="categories_morning_title">Good morning</string>
+    <string name="categories_morning_description">Do what\'s right in the morning</string>
+    <string name="categories_sleep_title">Prepare for bedtime</string>
+    <string name="categories_sleep_description">Let your sleep be sweet tonight</string>
+    <string name="categories_productivity_title">Promote productivity</string>
+    <string name="categories_productivity_description">Take a strategic approach to your efforts and time</string>
+    <string name="categories_leisure_title">Leisure moments</string>
+    <string name="categories_leisure_description">Live life to the fullest</string>
+    <string name="categories_budget_title">Keep a budget</string>
+    <string name="categories_budget_description">Every penny must work</string>
+    <string name="categories_pets_title">Honor your animals</string>
+    <string name="categories_pets_description">They really need you</string>
+    <string name="regular_text">Regular habit</string>
+    <string name="harmful_text">Harmful habit</string>
+    <string name="disposable_text">One-time habit</string>
+    <string name="weekday_sun">SU</string>
+    <string name="weekday_mon">MO</string>
+    <string name="weekday_tue">TU</string>
+    <string name="weekday_wed">WE</string>
+    <string name="weekday_thu">TH</string>
+    <string name="weekday_fri">FR</string>
+    <string name="weekday_sat">SA</string>
+    <string name="unknown">Unknown</string>
+    <string name="month_june">June</string>
+    <string name="month_july">July</string>
+    <string name="month_august">August</string>
+    <string name="month_september">September</string>
+    <string name="month_october">October</string>
+    <string name="month_november">November</string>
+    <string name="month_december">December</string>
+    <string name="month_january">January</string>
+    <string name="month_february">February</string>
+    <string name="month_march">March</string>
+    <string name="month_april">April</string>
+    <string name="month_may">May</string>
+    <string name="choose_color">Select color</string>
+    <string name="choose_deadline">Select end date</string>
+    <string name="choose_event_days">Select replay days</string>
+    <string name="choose_icon">Select icon</string>
+    <string name="choose_repeat_count">Number of times</string>
+    <string name="choose_target_type">Select target type</string>
+    <string name="choose_time">Choice time</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="remove">Remove</string>
+    <string name="target">Target</string>
+    <string name="daily_goal">goal for the day</string>
+    <string name="deadline_title">Last day</string>
+    <string name="target_type_off">off</string>
+    <string name="target_type_duration">Duration</string>
+    <string name="target_type_repeat">Repeat</string>
+    <string name="deadline">End</string>
+    <string name="and">and</string>
+    <string name="between">Between</string>
+    <string name="execute_in_interval">Execute in interval</string>
+    <string name="habits_day">Habits days</string>
+    <string name="repeat">Repeat</string>
+    <string name="color">Color</string>
+    <string name="icon">Logo</string>
+    <string name="title">Title</string>
+    <string name="empty_word">empty</string>
+    <string name="progress">empty</string>
+    <string name="times">times</string>
+    <string name="create_habit">Create habit</string>
+    <string name="create_new_habit">Create a new habit</string>
+    <string name="disposable_slogan">remind you of an important one-time event on a selected date.\nExample: Go to the doctor on Friday</string>.
+    <string name="harmful_slogan">Defaulted every day.\nBut if you snap, uncheck the fulfillment box.\nExample: quit smoking and drinking.</string>
+    <string name="regular_slogan">Part of your daily habits.\nRegularly mark them as accomplished.\nFor example: yoga three times a week.</string>
+    <string name="current_series">Current\n    series</string>
+    <string name="best_series">Best success series: </string>
+    <string name="number_completed_habits">A habit\ncompleted</string>
+    <string name="number_completed_habits_for_last_week">This week: </string>
+    <string name="percentage_of_completed">Percentage\nof completed"</string>.
+    <string name="number_habits">Habits: </string>
+    <string name="number_perfect_days">Perfect\ndays</string>
+    <string name="number_perfect_days_for_last_week">This week: </string>
 </resources>
