--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -109,4 +109,6 @@
     <string name="number_habits">Привычка: </string>
     <string name="number_perfect_days">Идеальные\nдни</string>
     <string name="number_perfect_days_for_last_week">Эта неделя: </string>
+    <string name="dont_forget" translatable="false">Не забудь!</string>
+    <string name="habit_notifications" translatable="false">Уведомления о привычках</string>
 </resources>
