--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,7 +13,7 @@
     <string name="harmful">Harmful</string>
     <string name="disposable">Disposable</string>
     <string name="templates_label">or choose from preset ones</string>
-    <string name="categories_trend_title">Trend Habits</string>
+    <string name="categories_trend_title">Trend habits</string>
     <string name="categories_trend_description">Keep up with the world</string>
     <string name="categories_trend_title_1">Structure screen time</string>
     <string name="categories_trend_description_1">Lock the screen and maintain attention</string>
@@ -29,18 +29,50 @@
     <string name="categories_trend_description_6">You don\'t look the same today as yesterday</string>
     <string name="categories_important_title">Important habits</string>
     <string name="categories_important_description">Fresh your life with simple actions</string>
-    <string name="categories_eat_title">Eat and drink healthfully</string>
+    <string name="categories_important_title_1">Set clear goals</string>
+    <string name="categories_important_description_1">Targets must be specific</string>
+    <string name="categories_important_title_2">Eat greens and fruits</string>
+    <string name="categories_important_description_2">Don\'t forget natural snacks</string>
+    <string name="categories_important_title_3">Sleep at least 8 hours</string>
+    <string name="categories_important_description_3">Leave enough time for sweet dreams</string>
+    <string name="categories_eat_title">Eat and drink with health benefits</string>
     <string name="categories_eat_description">Stay healthy by eating every day</string>
+    <string name="categories_eat_title_1">Drink alcohol</string>
+    <string name="categories_eat_description_1">Life is so much better without drinking</string>
+    <string name="categories_eat_title_2">Clean your teeth after eating</string>
+    <string name="categories_eat_description_2">Look solid and smile with confidence</string>
     <string name="categories_sports_title">Keep active and fit</string>
-    <string name="categories_sports_description">Sweat doesn\'t cheat</string>
+    <string name="categories_sports_description">Pot doesn\'t cheat</string>
+    <string name="categories_sports_title_1">Walk</string>
+    <string name="categories_sports_description_1">Strengthen your muscles and improve your mood</string>
+    <string name="categories_sports_title_2">Stretch</string>
+    <string name="categories_sports_description_2">relieve tension and stress</string>
     <string name="categories_morning_title">Good morning</string>
     <string name="categories_morning_description">Do what\'s right in the morning</string>
-    <string name="categories_sleep_title">Prepare for bedtime</string>
+    <string name="categories_morning_title_1">Rise early</string>
+    <string name="categories_morning_description_1">Shine before the sun</string>
+    <string name="categories_morning_title_2">Don\'t skip breakfast</string>
+    <string name="categories_morning_description_2">Wake up your body with the energy of food</string>
+    <string name="categories_morning_title_3">Make your bed</string>
+    <string name="categories_morning_description_3">Clean bed - clean mind</string>
+    <string name="categories_sleep_title">Sleep preparation</string>
     <string name="categories_sleep_description">Let your sleep be sweet tonight</string>
+    <string name="categories_sleep_title_1">Don\'t eat before bedtime</string>
+    <string name="categories_sleep_description_1">Your stomach needs a good night\'s sleep too</string>
+    <string name="categories_sleep_title_2">Have a breathing practice</string>
+    <string name="categories_sleep_description_2">Each breath in and out should be conscious</string>.
     <string name="categories_productivity_title">Promote productivity</string>
     <string name="categories_productivity_description">Take a strategic approach to your efforts and time</string>
+    <string name="categories_productivity_title_1">Make a to-do list for tomorrow</string>
+    <string name="categories_productivity_description_1">Your time should be visible and calculable</string>
+    <string name="categories_productivity_title_2">Do things</string>
+    <string name="categories_productivity_description_2">Do not put anything off until tomorrow</string>
     <string name="categories_leisure_title">Leisure moments</string>
     <string name="categories_leisure_description">Live life to the fullest</string>
+    <string name="categories_leisure_title_1">Watch a movie</string>
+    <string name="categories_leisure_description_1">Take a movie therapy</string>
+    <string name="categories_leisure_title_2">Take care of yourself</string>
+    <string name="categories_leisure_description_2">Take time for your body care</string>
     <string name="categories_budget_title">Keep a budget</string>
     <string name="categories_budget_description">Every penny must work</string>
     <string name="categories_pets_title">Honor your animals</string>
