--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -29,18 +29,50 @@
     <string name="categories_trend_description_6">Сегодня вы выглядите не так, как вчера</string>
     <string name="categories_important_title">Важные привычки</string>
     <string name="categories_important_description">Освежите свою жизнь простыми действиями</string>
+    <string name="categories_important_title_1">Ставьте перед собой четкие цели</string>
+    <string name="categories_important_description_1">Цели должны быть конкретными</string>
+    <string name="categories_important_title_2">Ешьте зелень и фрукты</string>
+    <string name="categories_important_description_2">Не забывайте о натуральных закусках</string>
+    <string name="categories_important_title_3">Спите не менее 8 часов</string>
+    <string name="categories_important_description_3">Оставьте достаточно времени для сладких снов</string>
     <string name="categories_eat_title">Ешьте и пейте с пользой для здоровья</string>
     <string name="categories_eat_description">Оставайтесь здоровым, принимая пищу каждый день</string>
+    <string name="categories_eat_title_1">Откажитесь от алкоголя</string>
+    <string name="categories_eat_description_1">Без выпивки жизнь намного лучше</string>
+    <string name="categories_eat_title_2">Вычищайте зубы после еды</string>
+    <string name="categories_eat_description_2">Выглядите солидно и улыбайтесь уверенно</string>
     <string name="categories_sports_title">Поддерживайте активность и физическую форму</string>
     <string name="categories_sports_description">Пот не обманывает</string>
+    <string name="categories_sports_title_1">Ходите пешком</string>
+    <string name="categories_sports_description_1">Укрепляйте мышцы и улучшайте себе настроение</string>
+    <string name="categories_sports_title_2">Растяжка</string>
+    <string name="categories_sports_description_2">Снимайте напряжение и стресс</string>
     <string name="categories_morning_title">Доброе утро</string>
     <string name="categories_morning_description">Делайте то, что правильно, по утрам</string>
+    <string name="categories_morning_title_1">Вставайте рано</string>
+    <string name="categories_morning_description_1">Светите раньше солнца</string>
+    <string name="categories_morning_title_2">Не пропускайте завтрак</string>
+    <string name="categories_morning_description_2">Разбудите свой организм энергией пищи</string>
+    <string name="categories_morning_title_3">Заправляйте постель</string>
+    <string name="categories_morning_description_3">Чистая постель — чистый разум</string>
     <string name="categories_sleep_title">Процедура подготовки ко сну</string>
     <string name="categories_sleep_description">Пусть ваш сон сегодня будет сладким</string>
+    <string name="categories_sleep_title_1">Не ешьте перед сном</string>
+    <string name="categories_sleep_description_1">Вашему желудку тоже требуется хороший сон</string>
+    <string name="categories_sleep_title_2">Занимайтесь дыхательными практиками</string>
+    <string name="categories_sleep_description_2">Каждый вдох и выдох должны быть осознанными</string>
     <string name="categories_productivity_title">Повышайте производительность</string>
     <string name="categories_productivity_description">Применяйте стратегический подход к своим усилиям и времени</string>
+    <string name="categories_productivity_title_1">Составляйте список дел на завтра</string>
+    <string name="categories_productivity_description_1">Ваше время должно быть видимым и исчисляемым</string>
+    <string name="categories_productivity_title_2">Делайте дела</string>
+    <string name="categories_productivity_description_2">Не откладывайте ничего на завтра</string>
     <string name="categories_leisure_title">Моменты досуга</string>
     <string name="categories_leisure_description">Проживите жизнь по-максимуму</string>
+    <string name="categories_leisure_title_1">Посмотрите фильм</string>
+    <string name="categories_leisure_description_1">Устройте себе фильмотерапию</string>
+    <string name="categories_leisure_title_2">Заботьтесь о себе</string>
+    <string name="categories_leisure_description_2">Находите время на уход за своим телом</string>
     <string name="categories_budget_title">Ведите бюджет</string>
     <string name="categories_budget_description">Каждая копейка должна работать</string>
     <string name="categories_pets_title">Цените своих животных</string>
